pygopherd (1.0.0) unstable; urgency=low

  * First release.  Welcome, pygopherd.
  * Added URL type rewriting handler.
  * Fixed gophermap info-only lines that have no tabs.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 17 Jul 2002 19:32:32 -0500

pygopherd (0.9.14) unstable; urgency=low

  * Fixed some more bugs -- HTMLParser.
  * Detect failure to allocate a socket and log it.  And still scream about
    it.

 -- John Goerzen <jgoerzen@complete.org>  Tue,  2 Jul 2002 11:45:20 -0500

pygopherd (0.9.13) unstable; urgency=low

  * Added signal handlers so shutdowns work properly.

 -- John Goerzen <jgoerzen@complete.org>  Tue,  2 Jul 2002 11:03:18 -0500

pygopherd (0.9.12) unstable; urgency=low

  * Minor bugfixes.
  * Added support for detached operation and pidfile writing.

 -- John Goerzen <jgoerzen@complete.org>  Wed,  1 May 2002 11:46:19 -0500

pygopherd (0.9.11) unstable; urgency=low

  * Added support for searches in HTTP handler.
  * Added pygfarm package and a PYG.
  * Many bugfixes.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 18 Apr 2002 12:23:09 -0500

pygopherd (0.9.10) unstable; urgency=low

  * Added handling of abstracts and other extended attributes.
  * More test cases.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 15 Apr 2002 19:20:04 -0500

pygopherd (0.9.4) unstable; urgency=low

  * Moved security handling to the handler base.
  * Fixed bug in URL handling -- it works now.

 -- John Goerzen <jgoerzen@complete.org>  Fri, 12 Apr 2002 11:46:14 -0500

pygopherd (0.9.3) unstable; urgency=low

  * Fixed a bug that prevented proper startup.  Fixed a lot of bugs
    with new HTTP code.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 11 Apr 2002 16:41:02 -0500

pygopherd (0.9.2) unstable; urgency=low

  * More bugfixes and new testing code.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 11 Apr 2002 14:34:43 -0500

pygopherd (0.9.1) unstable; urgency=low

  * Many routine bugfixes.
